deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smaple-app
  labels:
    app: sample-app
spec:
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: sample-app
          image: LOCATION-docker.pkg.dev/PROJECT_ID/REPOSITORY/IMAGE:TAG
          ports:
            - containerPort: 8080
