service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  ports:
    - port: 8080
  selector:
    app: sample-app
  type: LoadBalancer
